--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,17 @@ before_install:
 
 script:
     - docker run -e CI=true cenecoiz/docker-react npm run test
-    
+
+deploy: 
+    provider: elasticbeanstalk
+    region: "us-west-2"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "elasticbeanstalk-us-west-2-ID"
+    bucket_path: "docker"
+    on: 
+        branch: master
+    access_key_id:
+        secure: $AWS_ACCESS_KEY
+    secret_access_key:
+        secure: "$AWS_SECRET_KEY"
